--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,25 @@
 {% load static %}
 
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
+    {% block meta %}
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    {% endblock %}
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% block extra_meta %} {% endblock extra_meta %}
 
-
+    {% block corecss %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    {% endblock corecss %}
 
+    {% block extra_css %} {% endblock extra_css %}
+
+    {%block corejs %}
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
@@ -23,15 +29,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    {% endblock corejs %}
 
-    <title>Boutique Ado</title>
+    {% block extra_js %} {% endblock extra_js %}
+
+    <title>
+        Boutique Ado {% block extra_title %}{% endblock extra_title %}
+    </title>
 </head>
 
 <body>
+    <header class="container-fluid fixed-top">
+        {% if messages %}
+        <div class="message-container"></div>
+        {% endif %}
+    </header>
 
-    {% block %}
-
-    {% endblock %}
+    {% block %} {% endblock %}
 </body>
 
 </html>
